added item controller
